--- a/basics/src/App.css
+++ b/basics/src/App.css
@@ -13,3 +13,29 @@ div#root {
     0px 0px 0px 1px rgba(0,0,0,0.1),
     0px 4px 12px 0px rgba(0,0,0,0.08);
 }
+
+.navbar {
+  display: flex;
+  list-style-type: none;
+}
+
+.navbar li {
+  list-style-type: none;
+  width: 20%;
+  margin: 15px;
+}
+
+.modal {
+  background: white;
+  border: 1px solid #ccc;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  z-index: 5555;
+  box-shadow: 0px 5px 5px rgba(0,0,0,0.2);
+  padding: 15px;
+  min-width: 500px;
+  border-radius: 4px;
+}
